--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,5 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - aiohttp=3.8.5=py311h459d7ec_0
+  - aiohttp=3.8.5
   prefix: /opt/conda/envs/llm-qa-chat
